--- a/_posts/R/2020-12-30-how-to-fix-column-names/how-to-fix-column-names.Rmd
+++ b/_posts/R/2020-12-30-how-to-fix-column-names/how-to-fix-column-names.Rmd
@@ -9,6 +9,8 @@ date: 12-30-2020
 output:
   distill::distill_article:
     self_contained: false
+    highlight: haddock
+    highlight_downlit: false
 categories:
   - forcats
 ---
