--- a/Python.Rmd
+++ b/Python.Rmd
@@ -4,4 +4,5 @@ site: distill::distill_website
 listing:
   posts:
    - Python/2020-12-30-new-york-taxi-fare-rate
+   - Python/2020-12-30-the-relation-between-fast-food-and-obesity
 ---
