added welsome page

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,12 @@
 ---
-title: ""
+title: "All Dottos:"
 site: distill::distill_website
 listing: posts
 ---
+
+<br> <br> <br> <br> <br> <br>
+
+```{r, child= here::here("_assets", "welcome_page.Rmd")}
+```
+
+<br> <br> <br> <br> <br> <br>
