--- a/_assets/welcome_page.Rmd
+++ b/_assets/welcome_page.Rmd
@@ -7,7 +7,18 @@ output:
   html_document
 ---
 
-<style>
+```{r, include=FALSE}
+knitr::opts_chunk$set(
+  echo = FALSE, 
+  message = FALSE, 
+  warning = FALSE, 
+  dpi = 300, 
+  tidy = 'styler'
+  )
+```
+
+```{css}
+
 .blue-dot {
   height: 15px;
   width: 15px;
@@ -32,11 +43,12 @@ html, body {
 h1 {
     margin:0;
 }
+```
 
-</style>
+<br> <br> <br> <br> <br> <br>
 
 <div style="text-align: center; letter-spacing: 2px; line-height: 4rem;">
-<span style="font-size: 55px; color: #ff72a3; line-height:10px;">Share Efficiently <br> Your Data Experience</span>
+<span style="font-size: 55px; color: #044f6b; line-height:10px; font-family: 'Noto Serif JP';">Share Efficiently <br> Your Data Experience</span>
 <br>
 
 <span style="letter-spacing: 2px;">
@@ -49,3 +61,4 @@ Follow <span style="color: #005678">Data Motto</span> on
 Join our online community at <a href="https://Datamotto.slack.com" class="fa fa-slack" style="color: #55ACEE; font-size:18px; padding: .5em;"></a>
 </div>
 
+<br> <br> <br> <br> <br> <br>
