--- a/_assets/article_header.Rmd
+++ b/_assets/article_header.Rmd
@@ -42,6 +42,11 @@ knitr::opts_chunk$set(
   )
 ```
 
+```{r}
+library(reticulate)
+```
+
+
 ```{css}
 
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap');
