--- a/index.Rmd
+++ b/index.Rmd
@@ -15,11 +15,14 @@ background: red;
 padding-top: 0px;
 padding-bottom: 0px;
 }
+.shaded {
+    border-top: 0!important;
+    border-bottom: 0!important;
+}
 </style>
-```{r,  layout="l-screen-inset shaded padding"}
-htmltools::includeHTML(here::here("_assets", "firstTop.html"))
-```
 
 ```{r,  layout="l-screen-inset shaded padding"}
+htmltools::includeHTML(here::here("_assets", "firstTop.html"))
 htmltools::includeHTML(here::here("_assets", "cart.html"))
 ```
+
